# socceranalysis_python

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md   LICENSE  README.md  environment.yaml  pyproject.toml  soccer_data.xlsx
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/socceranalysis/: index.doctree
docs/_build/doctrees/autoapi/socceranalysis/find_team_stat/: index.doctree
docs/_build/doctrees/autoapi/socceranalysis/outlier_identification/: index.doctree
docs/_build/doctrees/autoapi/socceranalysis/playerranking/: index.doctree
docs/_build/doctrees/autoapi/socceranalysis/viz_stats/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/socceranalysis/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/socceranalysis/: index.html
docs/_build/html/autoapi/socceranalysis/find_team_stat/: index.html
docs/_build/html/autoapi/socceranalysis/outlier_identification/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/socceranalysis/: __init__.py  find_team_stat.py  outlier_identification.py  playerranking.py  viz_stats.py
tests/: test_socceranalysis.py
(+6 files in other folders)
