[tool.poetry]
name = "socceranalysis"
version = "0.1.3"
description = "Doing soccer stats analysis."
authors = ["Group 15 "]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/socceranalysis_python"
repository = "https://github.com/UBC-MDS/socceranalysis_python"
documentation = 'https://socceranalysis.readthedocs.io'
[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.24.1"
openpyxl = ">=3.0.10"
pandas = ">=1.5.2"
altair = ">=4.2.0"
matplotlib = ">=3.6.3"
panel = "^0.14.2"
ipython = "^8.8.0"
display = "^1.0.0"
python-semantic-release = "^7.33.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^0.17.1", python = "^3.9"}
sphinx-autoapi = "^2.0.1"
sphinx-rtd-theme = "^1.1.1"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
version_source = "commit"
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
